--- a/templates/login.html
+++ b/templates/login.html
@@ -1,10 +1,13 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %}Login{% endblock %}
 
 {% block styles %}
-<style>
-  body {
+
+<link rel="stylesheet" type="text/css" href="{% static '/login.css' %}">
+{% comment %} <style> {% endcomment %}
+  {% comment %} body {
     background-color: #f0f0f0;
   }
   .login-container {
@@ -64,8 +67,8 @@
     margin-bottom: 20px;
     border: 1px solid #f5c6cb;
     border-radius: 4px;
-  }
-</style>
+  } {% endcomment %}
+{% comment %} </style> {% endcomment %}
 {% endblock %}
 
 {% block content %}
@@ -88,6 +91,7 @@
         </div>
         <button type="submit">Login</button>
       </form>
+      <p>Don't have an account? <a href="{% url 'register' %}">Register</a></p>
     </div>
   </div>
 </div>
